[package]
name = "network_initializer"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam-channel = "0.5.13"
toml = "0.8.19"
rand = "0.9"
colored = "3"
log = "0.4"

slog = "2.7"
slog-term = "2.6"
slog-async = "2.6"
slog-stdlog = "4.1.1"
slog-scope = "4.4.0"

eframe = { version = "0.31.0", features = ["default", "__screenshot"] }
egui_extras = { version = "0.31.0", features = ["default", "image"] }

simulation_controller = { git = "https://github.com/Rustastic/SimulationController" }
chat-client = { git = "https://github.com/Rustastic/ChatClient" }
media_client = { git = "https://github.com/Rustastic/media_client" }
messages = { git = "https://github.com/Rustastic/Messages" }
communication_server = { git = "https://github.com/Rustastic/Servers", branch = "server_router_new" }

gui = { git = "https://github.com/Rustastic/GUI" }

rusty_drones = { git = "https://github.com/rusty-drone-2024/rusty-drone.git" }
LeDron_James = { git = "https://github.com/anass03/LeDron_James.git", features = ["log"] }
dr_ones = { git = "https://github.com/Dr-Ones/drone" }
skylink = { git = "https://github.com/Suge42/Skylink_drone.git" }
rustbusters-drone = { git = "https://github.com/Rustbusters/drone" }
rust-roveri = { git = "https://github.com/RustRoveri/rust-roveri.git" }
rust_do_it = { git = "https://github.com/RustDoIt/Drone.git" }
wg_2024-rust = { git = "https://github.com/LuigiMiazzo17/unitn-advancedProgramming-WGL_2024-drone.git" }
#null-pointer-drone = { git = "https://github.com/The-Null-Pointer-Patrol/null-pointer-drone.git"}
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git" }